--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         }
 
         nav {
-            background-color: rgba(248, 248, 248, 0.72);
+            ìbackground-color: rgba(0, 0, 0, 0.15);;
             padding: 1rem 2rem;
             position: fixed;
             top: 0;
