--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
             ìbackground-color: rgba(0, 0, 0, 0.15);;
             padding: 1rem 2rem;
             position: fixed;
+            backdrop-filter: blur(6px);
             top: 0;
             left: 50%;
             transform: translateX(-50%);
